fixed wrong colour on visited links

--- a/static/style.css
+++ b/static/style.css
@@ -129,7 +129,7 @@ a {
 	text-decoration: none;
 }
 a:visited {
-	color: white;
+	color: mediumpurple;
 }
 
 h1 {
